feat: :sparkles: Post

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-MY_SERVER = { "hostname": "127.10.10.10", "port":5010}
+MY_SERVER = { "hostname": "127.10.10.10", "port":5020}
 
 ATLAS_PASSWORD ="porcineador5"
 
-ATLAS_USER="root"
+ATLAS_USER="eddacoam"
 
 ATLAS_DB="db_limit_mongo"
